@@ -30,11 +30,10 @@
 
 void atomic_flag_clear(volatile atomic_flag *object)
 {
-#if defined(__SDCC_z80) || defined(__SDCC_z180) || defined(__SDCC_ez80_z80) || defined(__SDCC_z80n) || defined(__SDCC_gbz80) || defined(__SDCC_tlcs90) || defined(__SDCC_r2k) || defined(__SDCC_r2ka) || defined(__SDCC_r3ka) || defined(__SDCC_stm8) || defined(__SDCC_hc08) || defined(__SDCC_s08)
-	object->flag = 1;
-#elif defined(__SDCC_mcs51)
+#if defined(__SDCC_tlcs90) || defined(__SDCC_mcs51)
 	object->flag = 0;
-#else
+#elif defined(__SDCC_z80) || defined(__SDCC_z180) || defined(__SDCC_ez80_z80) || defined(__SDCC_z80n) || defined(__SDCC_gbz80) || defined(__SDCC_r2k) || defined(__SDCC_r2ka) || defined(__SDCC_r3ka) || defined(__SDCC_stm8) || defined(__SDCC_hc08) || defined(__SDCC_s08)
+	object->flag = 1;
 #error Support for atomic_flag not implemented
 #endif
 }
